intermediate [ci skip]